# protein-design

./: LICENSE  README.md  pyproject.toml
data/: CBDAS_substrate.sdf  README.md  aligned.fasta  unaligned.fasta
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
protein_design/: constants.py  data.py  discriminative.py  evaluator.py  generative.py  generative_models.py  learning.py  pytorch_tools.py  sequence.py  sequence_tools.py  splitter.py  structure.py  trainer.py
scripts/: bert.py  dock.py  mlp.py  train_bert.py  train_mlp.py  train_vae.py  vae.py
