[tool.poetry]
name = "protein_design"
version = "0.4.0"
description = "Python tools for protein design"
authors = ["Tianyu Lu"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
torch = "^1.10.2"
seaborn = "^0.11.2"
tqdm = "^4.62.3"
sklearn = "^0.0"
invoke = "^1.6.0"
biopython = "^1.79"
black = "^22.1.0"
Sphinx = "^4.4.0"
plotly = "^5.6.0"
umap-learn = "^0.5.2"
torchsummary = "^1.5.1"
numpy = "1.21.0"
scipy = "1.6.1"
pandas = "1.1.5"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
